// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal/HotspotEditorDataSourceTab Example with no hotspots 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        data-testid="HotspotEditorDataSourceTab"
      >
        <div
          className="iot--card-edit-form--input"
        >
          <div
            className="bx--multi-select__wrapper bx--list-box__wrapper"
          >
            <label
              className="bx--label"
              htmlFor="downshift-0-toggle-button"
              id="downshift-0-label"
            >
              Data items
            </label>
            <div
              className="bx--multi-select bx--list-box bx--list-box--light"
              id="floor map picture_dataSourceIds"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-0-label downshift-0-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-0-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  className="bx--list-box__label"
                  id="multiselect-field-label-5"
                >
                  Select data items
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-label="Open menu"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      Open menu
                    </title>
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-0-label"
                aria-multiselectable="true"
                className="bx--list-box__menu"
                id="downshift-0-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
        <div
          className="iot--list"
        >
          <div
            className="iot--list-header-container"
          />
          <div
            className="iot--list--content"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/HotSpotEditorModal/HotspotEditorDataSourceTab With preset values 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        data-testid="HotspotEditorDataSourceTab"
      >
        <div
          className="iot--card-edit-form--input"
        >
          <div
            className="bx--multi-select__wrapper bx--list-box__wrapper"
          >
            <label
              className="bx--label"
              htmlFor="downshift-0-toggle-button"
              id="downshift-0-label"
            >
              Data items
            </label>
            <div
              className="bx--multi-select bx--multi-select--selected bx--list-box bx--list-box--light"
              id="floor map picture_dataSourceIds"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-0-label downshift-0-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-0-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <div
                  aria-label="Clear Selection"
                  className="bx--list-box__selection bx--tag--filter bx--list-box__selection--multi"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                  title="Clear all selected items"
                >
                  4
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                    />
                  </svg>
                </div>
                <span
                  className="bx--list-box__label"
                  id="multiselect-field-label-6"
                >
                  Select data items
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-label="Open menu"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      Open menu
                    </title>
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-0-label"
                aria-multiselectable="true"
                className="bx--list-box__menu"
                id="downshift-0-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
        <div
          className="iot--list"
        >
          <div
            className="iot--list-header-container"
          />
          <div
            className="iot--list--content"
          >
            <div
              className="iot--list-item-parent"
              data-floating-menu-container={true}
            >
              <div
                className="iot--list-item"
              >
                <div
                  className="iot--list-item--content"
                >
                  <div
                    className="iot--list-item--content--values"
                  >
                    <div
                      className="iot--list-item--content--values--main"
                    >
                      <div
                        className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                        title="{high} temp"
                      >
                        {high} temp
                      </div>
                      <div
                        className="iot--list-item--content--row-actions"
                      >
                        <button
                          className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                          disabled={false}
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <span
                            className="bx--assistive-text"
                          >
                            Edit
                          </span>
                          <svg
                            aria-hidden="true"
                            aria-label="Edit"
                            className="bx--btn__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--list-item-parent"
              data-floating-menu-container={true}
            >
              <div
                className="iot--list-item"
              >
                <div
                  className="iot--list-item--content"
                >
                  <div
                    className="iot--list-item--content--values"
                  >
                    <div
                      className="iot--list-item--content--values--main"
                    >
                      <div
                        className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                        title="Temperature"
                      >
                        Temperature
                      </div>
                      <div
                        className="iot--list-item--content--row-actions"
                      >
                        <button
                          className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                          disabled={false}
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <span
                            className="bx--assistive-text"
                          >
                            Edit
                          </span>
                          <svg
                            aria-hidden="true"
                            aria-label="Edit"
                            className="bx--btn__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--list-item-parent"
              data-floating-menu-container={true}
            >
              <div
                className="iot--list-item"
              >
                <div
                  className="iot--list-item--content"
                >
                  <div
                    className="iot--list-item--content--values"
                  >
                    <div
                      className="iot--list-item--content--values--main"
                    >
                      <div
                        className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                        title="Pressure"
                      >
                        Pressure
                      </div>
                      <div
                        className="iot--list-item--content--row-actions"
                      >
                        <button
                          className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                          disabled={false}
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <span
                            className="bx--assistive-text"
                          >
                            Edit
                          </span>
                          <svg
                            aria-hidden="true"
                            aria-label="Edit"
                            className="bx--btn__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="iot--list-item-parent"
              data-floating-menu-container={true}
            >
              <div
                className="iot--list-item"
              >
                <div
                  className="iot--list-item--content"
                >
                  <div
                    className="iot--list-item--content--values"
                  >
                    <div
                      className="iot--list-item--content--values--main"
                    >
                      <div
                        className="iot--list-item--content--values--value iot--list-item--content--values--value__with-actions"
                        title="Elevators"
                      >
                        Elevators
                      </div>
                      <div
                        className="iot--list-item--content--row-actions"
                      >
                        <button
                          className="iot--btn bx--btn bx--btn--sm bx--btn--ghost bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y"
                          disabled={false}
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <span
                            className="bx--assistive-text"
                          >
                            Edit
                          </span>
                          <svg
                            aria-hidden="true"
                            aria-label="Edit"
                            className="bx--btn__icon"
                            fill="currentColor"
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
